[package]
name = "meow"
version = "0.0.3"
edition = "2021"
build = "build.rs"

[dependencies]
ropey = "1.6.1"
cfg-if = "1.0.0"
crossterm = "0.27.0"
const_format = "0.2.33"
unicode-width = "0.1.13"
unicode-segmentation = "1.11.0"
clap = { version = "4.5.17", features = ["derive"] }

# tree sitter
tree-sitter = "0.23.0"
tree-sitter-language = "0.1.0"
tree-sitter-highlight = "0.23.0"

[build-dependencies]
cc = "*"
toml = "*"
anyhow = "*"
serde = { version = "*", features = ["derive"] }

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
arboard = { version = "3.4.1", features = ["wayland-data-control"] }
