[package]
name = "meow-editor"
version = "1.2.0"
edition = "2021"
license = "MIT"
description = "the meow text editor"

# build info
build = "build.rs"
exclude = ["languages"]
include = ["languages.tar.zst", "languages.toml", "meow/*", "themes/*", "build.rs"]

[[bin]]
name = "meow"
path = "meow/entry.rs"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
home = "0.5.9"
ropey = "1.6.1"
toml = "0.8.19"
panic = "0.3.1"
cfg-if = "1.0.0"
crossterm = "0.27.0"
rustc-hash = "2.0.0"
thiserror = "1.0.63"
const_format = "0.2.33"
unicode-width = "0.1.13"
unicode-segmentation = "1.11.0"

# derive impl
clap = { version = "4.5.17", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }

# tree sitter
tree-sitter = "0.23.0"
tree-sitter-language = "0.1.0"
tree-sitter-highlight = "0.23.0"

[build-dependencies]
cc = "1"
tar = "0.4"
toml = "0.8"
zstd = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
arboard = { version = "3.4.1", features = ["wayland-data-control"] }
