[workspace]
resolver = "2"
members = [
	"crates/blaze",
	"crates/blaze-macros",
	"crates/blaze-tests",
]

[workspace.package]
license = "MIT"
edition = "2021"
version = "0.1.3"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[patch.crates-io]
# -- global --
# blaze = { version = "blaze" }
# blaze-macros = { version = "blaze-macros" }

# -- local --
blaze = { path = "crates/blaze" }
blaze-macros = { path = "crates/blaze-macros" }

[workspace.dependencies]
http = "1.1.0"
mime = "0.3.17"
blaze = "0.1.3"
blaze-macros = "0.1.3"
serde_json = "1.0.128"

serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
derive_more = { version = "1.0.0", features = ["display", "error", "from", "deref", "deref_mut"] }
