[package]
name = "tree-sitter-asm"
version = "0.22.6"
edition = "2021"
build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
name = "tree_sitter_asm"
path = "bindings/rust/lib.rs"

[dependencies.tree-sitter-language]
version = "0.1.0"

[dev-dependencies.tree-sitter]
version = "0.23"

[build-dependencies.cc]
version = "1.0.87"
