[package]
version.workspace = true
license.workspace = true
edition.workspace = true

name = "db-proto"
# readme = "../../README.md"
description = ""

[lib]
name = "db_proto"
path = "lib.rs"

[dependencies]
atoi.workspace = true
bytes.workspace = true
tokio.workspace = true
serde.workspace = true
bincode.workspace = true
tracing.workspace = true
async-stream.workspace = true
tokio-stream.workspace = true
