[package]
name = "blaze-macros"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "macros for blaze, the framework"

[lib]
name = "blaze_macros"
path = "lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.77", features = ["full"] }
