[package]
version.workspace = true
license.workspace = true
edition.workspace = true

name = "blaze-macros"
description = "macros for blaze, the framework"

[lib]
name = "blaze_macros"
path = "lib.rs"
proc-macro = true

[dependencies]
quote = "1.0.37"
proc-macro2 = "1.0.86"
syn = { version = "2.0.77", features = ["full"] }
