[package]
name = "blaze-tests"
version.workspace = true
edition.workspace = true

[[bin]]
name = "blaze_tests"
path = "test.rs"

[dependencies]
blaze = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }

# local testing deps
tracing.workspace = true
tracing-subscriber = "0.3.18"