[package]
version.workspace = true
license.workspace = true
edition.workspace = true

name = "blaze"
readme = "../../README.md"
description = "blazing fast http framework"

[lib]
name = "blaze"
path = "lib.rs"

[dependencies]
http = { workspace = true }
mime = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
derive_more = { workspace = true }
blaze-macros = { workspace = true }
